# BarnCleaner1

./: .gitignore  CMakeLists.txt  LABGROUP.md  ReadMe.md  package.xml  startup.sh
auto_poweroff/: CMakeLists.txt  ReadMe.md  package.xml  setup.py
auto_poweroff/scripts/: poweroff
auto_poweroff/src/: auto_poweroff.py  check_power.sh
config/: local_planner_params.yaml
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: Detection.msg  ObjectLocationArray.msg
global_mission_planner/: CMakeLists.txt  package.xml
global_mission_planner/launch/: global_mission.launch  global_mission_planner.launch
global_mission_planner/scripts/: global_mission_planner_node.py
hri_communication/: CMakeLists.txt  package.xml  setup.py
hri_communication/scripts/: hri_communication  hri_communication_node.py
hri_communication/src/: hri_communication  hri_communication_node.py
interface_MDP/: README  index.html  package-lock.json  package.json  script.js  server.js  style.css
launch_group18/: CMakeLists.txt  package.xml
launch_group18/launch/: hri_communication.launch  perception.launch
manage_rosbag/: CMakeLists.txt  ReadMe.md
manage_rosbag/src/launch/: create_mapping_bag.launch  create_perception_rosbag.launch  export_jpeg.launch  test_yolo.launch
mission_planner/: CMakeLists.txt  package.xml  setup.py
mission_planner/launch/: mission_planner.launch
mission_planner/scripts/: dummy_global_mission_planner.py  mission_planner  position_saver
mission_planner/src/: mission_planner.py
mission_planner/srv/: ProvidePath.srv
navigation/: CMakeLists.txt  package.xml
navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
navigation/launch/: mapping.launch  mapping_alternative.launch  navigation.launch  navigation_alternative.launch  navigation_simu.launch  save_map.launch
object_detector/: CMakeLists.txt  ReadMe.md  package.xml  setup.py
object_detector/models/best_ncnn_model/: model_ncnn.py
object_detector/scripts/: custom_msg_util  run_object_detector  tf_lite_ros.py
object_detector/src/: __init__.py  create_video.py  custom_msg_util.py  model_class.py  object_detector.py
red_object_detector/: CMakeLists.txt  package.xml  readme.md
red_object_detector/scripts/: red_object_detector.py
src/: local_planner_node.py
src/auto_poweroff/: CMakeLists.txt  package.xml
src/auto_poweroff/script/: poweroff
src/auto_poweroff/scripts/: poweroff
src/auto_poweroff/src/: auto_poweroff.py
src/custom_msgs/: CMakeLists.txt
src/custom_msgs/msg/: Detection.msg  ObjectLocation.msg
src/manage_rosbag/: package.xml
src/manage_rosbag/src/launch/: create_mapping_bag.launch  create_perception_rosbag.launch  export_jpeg.launch  test_yolo_export.launch
src/mapping/: package.xml
src/mapping/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/mapping/launch/: slam.launch  teleop.launch
src/mirte18_nav_stack/: CMakeLists.txt  costmap_common_params.yaml  package.xml  tf_out.txt
src/mirte18_nav_stack/launch/: live_navigation.launch  move_base.launch  navigation.launch  start_mapping.launch.swp
src/mission_planner/: CMakeLists.txt  package.xml  setup.py
src/mission_planner/src/: mission_planner.cpp  mission_planner.py
src/navigation/: package.xml
src/navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/navigation/launch/: mapping.launch  navigation.launch  slam.launch
src/navigation/maps/: map_stairwayhall.yaml  my_map.yaml
src/object_detector/: CMakeLists.txt  package.xml
src/object_detector/models/best_ncnn_model/: metadata.yaml  model_ncnn.py
src/object_detector/scripts/: custom_msg_util  tf_lite_default.py  tf_lite_ros.py  yolo_inference.py
src/object_detector/src/: __init__.py  object_detector.py  yolo_inference.py  yolo_train.py
src/tf_fix/: CMakeLists.txt  package.xml
src/tf_fix/launch/: fix_tf.launch
src/tf_fix/script/: modify_tf.py
src/tracking/scripts/: dummy_publisher.py  object_localization.py
tracking/: CMakeLists.txt  package.xml  readme.md
tracking/scripts/: dummy_publisher.py  object_localization.py
