<?xml version="1.0"?>
<package format="2">
    <name>global_mission_planner</name>
    <version>1.0.0</version>
    <description>A package for the global mission planner</description>
    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>move_base_msgs</build_depend>
    <build_depend>tf</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
        <node name="global_mission_planner_node" pkg="global_mission_planner" type="global_mission_planner_node" output="screen"/>
    </export>
</package>